--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-cached": "^1.1.1",
     "gulp-dart-sass": "^1.0.2",
     "gulp-debug": "^4.0.0",
     "gulp-notify": "^4.0.0",
